# Image-Cropper

./: README.md
demo/: CMakeLists.txt  demowidget.cpp  demowidget.h  main.cpp
src/: imagecropper.cpp
